force-app/main/default/objects/Forecast_Unit__c/Forecast_Unit__c.object-meta.xml
<CustomObject>
    <description>Forecast entity: Account-Product-End Customer for which a forecast is made</description>
    <label>Forecast Unit</label>
    <nameField>
        <label>Forecast Unit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Units</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>