force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Actual_Sales_2018__c.field-meta.xml
<CustomField>
    <fullName>a4a_Actual_Sales_2018__c</fullName>
    <label>a4a Actual Sales 2018 -</label>
    <summarizedField>Forecast_Unit_Period__c.Actual_Sales__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.History_Month__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>