force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Country__c.field-meta.xml
<CustomField>
    <fullName>a4a_Country__c</fullName>
    <formula>UPPER(Project_Owner_Account__r.BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Country</label>
    <type>Text</type>
</CustomField>