force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Flagged_Item_Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>a4a_Flagged_Item_Opp_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>a4a Flagged Item Opp Product</label>
    <type>Checkbox</type>
</CustomField>