force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Key_Level_Key__c.field-meta.xml
<CustomField>
    <fullName>a4a_Key_Level_Key__c</fullName>
    <formula>IF(
a4a_isAboveTreshold__c = True 
&amp;&amp; 
LEN(Project_Owner_Account__r.SF_Account_Number__c) &gt; 0 
,
&quot;/ProjectOwner:&quot; 
&amp;
Project_Owner_Account__r.SF_Account_Number__c
&amp;
&quot;/Product:&quot; 
&amp; 
BLANKVALUE(Product__r.ProductCode,&quot;Other&quot;)
&amp; 
&quot;/Country:&quot; 
&amp; 
BLANKVALUE(UPPER(Project_Owner_Account__r.BillingCountry),&quot;Other&quot;)
&amp;
&quot;/ProductCategory:&quot; 
&amp; 
BLANKVALUE(TEXT(Product__r.Reporting_Category__c),&quot;Other&quot;)
&amp; 
&quot;/Region:&quot; 
&amp; 
BLANKVALUE(TEXT(Project_Owner_Account__r.uB_Office__c),&quot;Other&quot;)
&amp; 
&quot;/UnitType:&quot; 
&amp; 
&quot;GC&quot; 
&amp; 
&quot;/Unit:&quot; 
&amp; 
&quot;CHF&quot;
&amp; 
&quot;/Meaning:KeyLevel&quot;
&amp; 
&quot;/Cube:KeyLevel&quot;
&amp;
&quot;/&quot;
,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Key Level Key</label>
    <type>Text</type>
</CustomField>