force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Manual_Forecast_2020__c.field-meta.xml
<CustomField>
    <fullName>a4a_Manual_Forecast_2020__c</fullName>
    <label>a4a Manual Forecast 2020</label>
    <summarizedField>Forecast_Unit_Period__c.Forecast_manual__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.History_Month__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>