force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Measure_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>a4a_Measure_Report_Name__c</fullName>
    <externalId>true</externalId>
    <label>a4a Measure Report Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>