force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Measure_Report_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>a4a_Measure_Report_Name_Formula__c</fullName>
    <formula>LEFT(a4a_Country__c &amp; &quot; - &quot; &amp;  a4a_Product__c &amp; &quot; - &quot; &amp;   Project_Owner_Account__r.SF_Account_Number__c ,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Measure Report Name Formula</label>
    <type>Text</type>
</CustomField>