force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Price_Cube_Value__c.field-meta.xml
<CustomField>
    <fullName>a4a_Price_Cube_Value__c</fullName>
    <formula>NULLVALUE(Actual_Sales_Price__c,NULLVALUE(Budget_Price_next_FY__c,Budget_Price__c))

*
CASE( CurrencyIsoCode , 
&quot;USD&quot;,$User.USDtoCHF__c, 
&quot;EUR&quot;,$User.EURtoCHF__c, 
&quot;JPY&quot;, $User.JPYtoCHF__c , 
1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Price Cube Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>