force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Product__c.field-meta.xml
<CustomField>
    <fullName>a4a_Product__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Product</label>
    <type>Text</type>
</CustomField>