force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>a4a_Product_Category__c</fullName>
    <formula>TEXT(Product__r.Reporting_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Product Category</label>
    <type>Text</type>
</CustomField>