force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>a4a_Project_Owner__c</fullName>
    <formula>Project_Owner_Account__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Project Owner</label>
    <type>Text</type>
</CustomField>