force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Region__c.field-meta.xml
<CustomField>
    <fullName>a4a_Region__c</fullName>
    <formula>TEXT(Project_Owner_Account__r.uB_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Region</label>
    <type>Text</type>
</CustomField>