force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Unit__c.field-meta.xml
<CustomField>
    <fullName>a4a_Unit__c</fullName>
    <formula>&quot;PCS&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Unit</label>
    <type>Text</type>
</CustomField>