force-app/main/default/objects/Forecast_Unit__c/fields/a4a_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>a4a_Unit_Type__c</fullName>
    <formula>&quot;Quantity&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Unit Type</label>
    <type>Text</type>
</CustomField>