force-app/main/default/objects/Forecast_Unit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Purchasing entity (customer who receives invoice).</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast Units</relationshipLabel>
    <relationshipName>Forecast_Units</relationshipName>
    <type>Lookup</type>
</CustomField>