force-app/main/default/objects/Forecast_Unit__c/fields/Actual_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_Price__c</fullName>
    <inlineHelpText>Sales price of the youngest order in order book or closed orders.</inlineHelpText>
    <label>Actual Sales Price</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>