force-app/main/default/objects/Forecast_Unit__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>text( End_Customer__r.Application_Type__c )</formula>
    <inlineHelpText>Application type of end customer.</inlineHelpText>
    <label>Old Application Type</label>
    <type>Text</type>
</CustomField>