force-app/main/default/objects/Forecast_Unit__c/fields/AVG_Sales_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>AVG_Sales_Last_3_Months__c</fullName>
    <description>With current setting, this is always the sum of sales of the last 3 months divided by 4. (conservative approach)</description>
    <formula>MAX(Sales_Last_3_Months__c / MAX(X3_months_forward_periods__c, 4),0.1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Sales Last 3 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>