force-app/main/default/objects/Forecast_Unit__c/fields/Budget_ActFP__c.field-meta.xml
<CustomField>
    <fullName>Budget_ActFP__c</fullName>
    <inlineHelpText>Quantity budgeted for this year</inlineHelpText>
    <label>This FY Budget Qty</label>
    <summarizedField>Forecast_Unit_Period__c.Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Budget_Actual_FP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>