force-app/main/default/objects/Forecast_Unit__c/fields/Budget_Next_FPeriod__c.field-meta.xml
<CustomField>
    <fullName>Budget_Next_FPeriod__c</fullName>
    <inlineHelpText>Total quantity budgeted for next year</inlineHelpText>
    <label>Next FY Budget Qty</label>
    <summarizedField>Forecast_Unit_Period__c.Budget__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Budget_next_FP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>