force-app/main/default/objects/Forecast_Unit__c/fields/Budget_Price__c.field-meta.xml
<CustomField>
    <fullName>Budget_Price__c</fullName>
    <inlineHelpText>Average sales price used for the budget of the current year.</inlineHelpText>
    <label>Budget Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>