force-app/main/default/objects/Forecast_Unit__c/fields/Budget_Price_next_FY__c.field-meta.xml
<CustomField>
    <fullName>Budget_Price_next_FY__c</fullName>
    <inlineHelpText>Average sales price expected for next year.</inlineHelpText>
    <label>Budget Price next FY</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>