force-app/main/default/objects/Forecast_Unit__c/fields/Budget_Sales_Actual_FP__c.field-meta.xml
<CustomField>
    <fullName>Budget_Sales_Actual_FP__c</fullName>
    <formula>IF( Budget_Price__c = 0 , 
IF(  Actual_Sales_Price__c  = 0 ,  Budget_Price_next_FY__c ,  Actual_Sales_Price__c ),
Budget_Price__c) * Budget_ActFP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales budget for this year</inlineHelpText>
    <label>This FY Budget Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>