force-app/main/default/objects/Forecast_Unit__c/fields/Budget_Sales_Next_FP__c.field-meta.xml
<CustomField>
    <fullName>Budget_Sales_Next_FP__c</fullName>
    <formula>Budget_Next_FPeriod__c *   Budget_Price_next_FY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total sales budgeted for next year</inlineHelpText>
    <label>Next FY Budget Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>