force-app/main/default/objects/Forecast_Unit__c/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <description>ORIG: Account__r.Channel_Manager__c</description>
    <formula>Account__r.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;Account__r.New_Channel_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Channel manager for this account.</inlineHelpText>
    <label>Channel Manager</label>
    <type>Text</type>
</CustomField>