force-app/main/default/objects/Forecast_Unit__c/fields/Channel_Manager_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager_End_Customer__c</fullName>
    <description>Orig: End_Customer__r.Channel_Manager__c</description>
    <formula>End_Customer__r.New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;End_Customer__r.New_Channel_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Channel Manager of the End Customer Account</inlineHelpText>
    <label>Channel Manager End Customer</label>
    <type>Text</type>
</CustomField>