force-app/main/default/objects/Forecast_Unit__c/fields/COGS_based_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>COGS_based_Sales_Price__c</fullName>
    <formula>/* 
previous formula, used in workflow field update:
NULLVALUE( Budget_Price_next_FY__c,Product__r.COGS_1__c * 1.3)

*/

IF( Budget_Price_next_FY__c=0,Product__r.COGS_1__c * 1.3,Budget_Price_next_FY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COGS based Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>