force-app/main/default/objects/Forecast_Unit__c/fields/End_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>End_Cust_ID__c</fullName>
    <formula>End_Customer__r.Id</formula>
    <label>End Cust ID</label>
    <type>Text</type>
</CustomField>