force-app/main/default/objects/Forecast_Unit__c/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>End customer of Account</inlineHelpText>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast Units as End Customer</relationshipLabel>
    <relationshipName>Forecast_Units_as_End_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>