force-app/main/default/objects/Forecast_Unit__c/fields/End_Customer_SF_Acc_No__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_SF_Acc_No__c</fullName>
    <formula>End_Customer__r.SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer SF Acc No</label>
    <type>Text</type>
</CustomField>