force-app/main/default/objects/Forecast_Unit__c/fields/End_Customer_uB_Office_Copy__c.field-meta.xml
<CustomField>
    <fullName>End_Customer_uB_Office_Copy__c</fullName>
    <description>Used for Sharing Rules to grant access to End Customer Account Owner</description>
    <inlineHelpText>Used for Sharing Rules to grant access to End Customer Account Owner</inlineHelpText>
    <label>End Customer uB Office Copy</label>
    <length>32</length>
    <type>Text</type>
</CustomField>