force-app/main/default/objects/Forecast_Unit__c/fields/EndCustomer_Office__c.field-meta.xml
<CustomField>
    <fullName>EndCustomer_Office__c</fullName>
    <formula>TEXT(End_Customer__r.uB_Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Customer Reporting Region</label>
    <type>Text</type>
</CustomField>