force-app/main/default/objects/Forecast_Unit__c/fields/FCUReference_ext_ID__c.field-meta.xml
<CustomField>
    <fullName>FCUReference_ext_ID__c</fullName>
    <externalId>true</externalId>
    <label>FCUReference ext ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>