force-app/main/default/objects/Forecast_Unit__c/fields/Flag_change_request__c.field-meta.xml
<CustomField>
    <fullName>Flag_change_request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag proposal from account owner</inlineHelpText>
    <label>Propose Flag</label>
    <type>Checkbox</type>
</CustomField>