force-app/main/default/objects/Forecast_Unit__c/fields/Flag_Reason__c.field-meta.xml
<CustomField>
    <fullName>Flag_Reason__c</fullName>
    <inlineHelpText>Reason why this FU has been flagged.</inlineHelpText>
    <label>Flag Reason</label>
    <type>TextArea</type>
</CustomField>