force-app/main/default/objects/Forecast_Unit__c/fields/Flag_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Flag_Removal_Reason__c</fullName>
    <inlineHelpText>Reason why this flag should be removed</inlineHelpText>
    <label>Flag Removal Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>