force-app/main/default/objects/Forecast_Unit__c/fields/Flagged_item__c.field-meta.xml
<CustomField>
    <fullName>Flagged_item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>FU that is considered important and needs to be updated manually.</inlineHelpText>
    <label>Flagged item</label>
    <type>Checkbox</type>
</CustomField>