force-app/main/default/objects/Forecast_Unit__c/fields/Forecast_Price_Used__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Price_Used__c</fullName>
    <description>Set forecast price for next FP if not empty</description>
    <formula>IF(ISBLANK(Budget_Price_next_FY__c) ,  Actual_Sales_Price__c , Budget_Price_next_FY__c)</formula>
    <inlineHelpText>Set forecast price for next FP if not empty</inlineHelpText>
    <label>Forecast Price Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>