force-app/main/default/objects/Forecast_Unit__c/fields/ForecastUnitOwnerMissmatch__c.field-meta.xml
<CustomField>
    <fullName>ForecastUnitOwnerMissmatch__c</fullName>
    <formula>IF(Account_Owner_ID__c &lt;&gt;  OwnerId,&quot;yes&quot;,&quot;no&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ForecastUnitOwnerMissmatch</label>
    <type>Text</type>
</CustomField>