force-app/main/default/objects/Forecast_Unit__c/fields/is_current_user__c.field-meta.xml
<CustomField>
    <fullName>is_current_user__c</fullName>
    <formula>IF ( OR( End_Customer__r.New_Channel_Manager__c =  $User.Id  ,   Account__r.New_Channel_Manager__c =  $User.Id ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is_current_user</label>
    <type>Checkbox</type>
</CustomField>