force-app/main/default/objects/Forecast_Unit__c/fields/Last_Forecast_Unit_Period__c.field-meta.xml
<CustomField>
    <fullName>Last_Forecast_Unit_Period__c</fullName>
    <inlineHelpText>Month of the last FUP that was created.</inlineHelpText>
    <label>Last Forecast Unit Period</label>
    <summarizedField>Forecast_Unit_Period__c.History_Month__c</summarizedField>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>