force-app/main/default/objects/Forecast_Unit__c/fields/Last_Manual_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Manual_Update__c</fullName>
    <inlineHelpText>Date of last modification of a manual forecast</inlineHelpText>
    <label>Last Manual Update</label>
    <summarizedField>Forecast_Unit_Period__c.Last_Forecast_Manual_Update__c</summarizedField>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>