force-app/main/default/objects/Forecast_Unit__c/fields/Managed_Last_4_Months__c.field-meta.xml
<CustomField>
    <fullName>Managed_Last_4_Months__c</fullName>
    <formula>if( or(isnull(Last_Manual_Update__c),  Last_Manual_Update__c &lt; (today () - 120)), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 if last manual update withing last 120 days, 0 else</inlineHelpText>
    <label>Managed Last 4 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>