force-app/main/default/objects/Forecast_Unit__c/fields/Manual_Fcst_qty__c.field-meta.xml
<CustomField>
    <fullName>Manual_Fcst_qty__c</fullName>
    <inlineHelpText>Sum of manual forecast</inlineHelpText>
    <label>Manual Fcst Qty next FY</label>
    <summarizedField>Forecast_Unit_Period__c.Forecast_manual__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Budget_next_FP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>