force-app/main/default/objects/Forecast_Unit__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>From End Customer</description>
    <formula>TEXT( End_Customer__r.New_Market__c )</formula>
    <inlineHelpText>From End Customer</inlineHelpText>
    <label>Market</label>
    <type>Text</type>
</CustomField>