force-app/main/default/objects/Forecast_Unit__c/fields/New_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Application_Type__c</fullName>
    <formula>text( End_Customer__r.New_Application_Type__c )</formula>
    <inlineHelpText>Application type of end customer.</inlineHelpText>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>