force-app/main/default/objects/Forecast_Unit__c/fields/Next_FY_Sales__c.field-meta.xml
<CustomField>
    <fullName>Next_FY_Sales__c</fullName>
    <description>Sum of Forecast Unit Period: Forecast Sales (of next year)</description>
    <inlineHelpText>Sum of Forecast Unit Period: Forecast Sales (of next year)</inlineHelpText>
    <label>Next FY Sales</label>
    <summarizedField>Forecast_Unit_Period__c.Forecast_Sales_Copy__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Budget_next_FP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>