force-app/main/default/objects/Forecast_Unit__c/fields/Number_of_Manual_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Manual_Forecast__c</fullName>
    <inlineHelpText>Number of FUPs of current and future months than contain a manual forecast</inlineHelpText>
    <label>Number of Manual Forecast</label>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Future_Month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Forecast_manual__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>