force-app/main/default/objects/Forecast_Unit__c/fields/Order_Book_Actual_FP__c.field-meta.xml
<CustomField>
    <fullName>Order_Book_Actual_FP__c</fullName>
    <inlineHelpText>Quantity of open orders with delivery date this year.</inlineHelpText>
    <label>This FY Open Orders Qty</label>
    <summarizedField>Forecast_Unit_Period__c.Order_Book__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Unit_Period__c.Budget_Actual_FP__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Unit_Period__c.Forecast_Unit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>