force-app/main/default/objects/Forecast_Unit__c/fields/Ordering_No__c.field-meta.xml
<CustomField>
    <fullName>Ordering_No__c</fullName>
    <formula>if( Product__r.Automotive_Product__c,  Product__r.Type_No__c, Product__r.ProductCode)</formula>
    <inlineHelpText>For automotive products: type number; for other products: ordering code</inlineHelpText>
    <label>Ordering Code</label>
    <type>Text</type>
</CustomField>