force-app/main/default/objects/Forecast_Unit__c/fields/Packaging_Size__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Size__c</fullName>
    <label>Packaging Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>