force-app/main/default/objects/Forecast_Unit__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <formula>text( Product__r.Product_Center__c)</formula>
    <inlineHelpText>Copied from Product information</inlineHelpText>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>