force-app/main/default/objects/Forecast_Unit__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <formula>Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>