force-app/main/default/objects/Forecast_Unit__c/fields/Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Product_Segment__c</fullName>
    <formula>Product__r.Product_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Segment</label>
    <type>Text</type>
</CustomField>