force-app/main/default/objects/Forecast_Unit__c/fields/Product_Series__c.field-meta.xml
<CustomField>
    <fullName>Product_Series__c</fullName>
    <description>Product Series copied from Product</description>
    <formula>text(Product__r.Product_Series__c)</formula>
    <inlineHelpText>Product Series copied from Product</inlineHelpText>
    <label>Product Series</label>
    <type>Text</type>
</CustomField>