force-app/main/default/objects/Forecast_Unit__c/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <formula>text(Product__r.Product_Status__c)</formula>
    <inlineHelpText>Product status (from Product)</inlineHelpText>
    <label>Product Status</label>
    <type>Text</type>
</CustomField>