force-app/main/default/objects/Forecast_Unit__c/fields/Project_Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast Units (Project Owner Account)</relationshipLabel>
    <relationshipName>Forecast_Units2</relationshipName>
    <type>Lookup</type>
</CustomField>