force-app/main/default/objects/Forecast_Unit__c/fields/Project_Owner_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Channel_Manager__c</fullName>
    <label>Project Owner Channel Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>