force-app/main/default/objects/Forecast_Unit__c/fields/Project_Owner_Channel_Manager_Auto__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Channel_Manager_Auto__c</fullName>
    <formula>Project_Owner_Account__r.New_Channel_Manager__r.FirstName  &amp; &quot; &quot; &amp; Project_Owner_Account__r.New_Channel_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Channel Manager Auto</label>
    <type>Text</type>
</CustomField>