force-app/main/default/objects/Forecast_Unit__c/fields/Project_Owner_Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Reporting_Region__c</fullName>
    <label>Project Owner Reporting Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>