force-app/main/default/objects/Forecast_Unit__c/fields/Project_Owner_Reporting_Region_Auto__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Reporting_Region_Auto__c</fullName>
    <formula>Case (TEXT(Project_Owner_Account__r.Reporting_Area__c),
&quot;AU&quot;,&quot;Australia&quot;,
&quot;NZ&quot;,&quot;Australia&quot;,
&quot;IN&quot;,&quot;India&quot;,
&quot;MY&quot;,&quot;Rest of APAC&quot;,
&quot;PH&quot;,&quot;Rest of APAC&quot;,
&quot;SG&quot;,&quot;Rest of APAC&quot;,
&quot;TH&quot;,&quot;Rest of APAC&quot;,
&quot;JP&quot;,&quot;Japan&quot;,
&quot;CN&quot;,&quot;China&quot;,
&quot;HK&quot;,&quot;China&quot;,
&quot;TW&quot;,&quot;Taiwan&quot;,
&quot;KR&quot;,&quot;Korea&quot;,
&quot;Rest of APAC&quot;,&quot;Rest of APAC&quot;,

Case(TEXT(Project_Owner_Account__r.Reporting_Region__c) ,
&quot;EMEA&quot;,&quot;EMEA&quot;,
&quot;AMERICAS&quot;, &quot;Americas&quot;,
 TEXT(Project_Owner_Account__r.uB_Office__c) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Owner Reporting Region Auto</label>
    <type>Text</type>
</CustomField>