force-app/main/default/objects/Forecast_Unit__c/fields/Propose_Flag_Removal__c.field-meta.xml
<CustomField>
    <fullName>Propose_Flag_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the flag should be removed.</inlineHelpText>
    <label>Propose Flag Removal</label>
    <type>Checkbox</type>
</CustomField>