force-app/main/default/objects/Forecast_Unit__c/fields/Reporting_Area__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Area__c</fullName>
    <formula>IF(ISBLANK(End_Customer__r.Reporting_Region_and_Area__c), Account__r.Reporting_Region_and_Area__c, End_Customer__r.Reporting_Region_and_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Area</label>
    <type>Text</type>
</CustomField>