force-app/main/default/objects/Forecast_Unit__c/fields/Reporting_Category__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Category__c</fullName>
    <formula>text(Product__r.Reporting_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Category</label>
    <type>Text</type>
</CustomField>